--- a/p/about.html
+++ b/p/about.html
@@ -196,7 +196,16 @@
       </div>
       <div class="text wow fadeInUp">
         <p style="text-indent: 2em;">
-          哈尔滨飞米智能科技有限公司是一家由哈尔滨工业大学及教授共同投资成立创立的高科技公司。公司创始人系哈尔滨工业大学教授，黑龙江省高层次人才，依托创始人在传感器和运动控制方面多年的技术积淀，公司将致力于高端制造装备的研发和生产，产品广泛应用于半导体、医药、3C和航空航天等高端制造业。公司成立伊始就受到相关部门和投资公司的重点关注，目前已经获得黑龙江省科力高科技产业投资有限公司的融资。
+          哈尔滨飞米智能科技有限公司是一家专注于精密测量及精密运动控制技术研究、高端制造装备的研发和生产、赋能半导体加工等行业应用解决方案的高科技企业。</span>
+        </p>
+        <p style="text-indent: 2em;">
+          公司源于哈尔滨工业大学精密测量与运动控制科研团队。团队在超精密微位移驱动控制技术，超精密测量控制技术与仪器工程方面深耕十余年，研究成果解决了多项国内卡脖子问题，取得了诸多奖项。
+        </p>
+        <p style="text-indent: 2em;">
+          公司传承了团队的创新基因与探索精神，目前公司产品主要面向半导体和航空航天领域，未来将拓展至消费电子、医药、日化等高端制造业，致力于成为精密运动控制及精密测量技术的引领者和开拓者，帮助客户更高效地推动行业技术发展，创造更加繁荣、高效和可持续的美好未来‌。
+        </p>
+        <p style="text-indent: 2em;">
+          公司成立伊始就受到相关部门和投资公司的重点关注，目前已经获得黑龙江省科力高科技产业投资有限公司的融资。
         </p>
       </div>
       <ul>
@@ -216,32 +225,32 @@
     </div>
   </div>
 
-  <div class="about1" id="about2"></div>
-  <div class="container">
-    <div class="index_title2 wow zoomIn">
-      <h3>企业特色</h3>
-      <p><span>Company characteristics</span></p>
+  <div class="about1" id="about2">
+    <div class="container">
+      <div class="index_title2 wow zoomIn">
+        <h3>企业特色</h3>
+        <p><span>Company characteristics</span></p>
+      </div>
+      <div class="text wow fadeInUp">
+        <p style="text-indent: 2em;">
+          作为一家创新驱动的企业，飞米智能将通过强大的研发能力和不断的技术突破，力求在高端制造领域引领行业变革，推动产业的智能化与数字化发展。我们坚持以技术创新为核心，提供涵盖全流程的高效、智能制造解决方案，助力客户提升竞争力，为中国高端制造业的持续升级贡献力量。</span>
+        </p>
+      </div>
+      <ul>
+        <li>
+          <img src="../data/images/slide/20210818091011_734.png" alt="">
+        </li>
+        <li>
+          <img src="../data/images/slide/20210818091021_826.png" alt="">
+        </li>
+        <li>
+          <img src="../data/images/slide/20210818091030_952.png" alt="">
+        </li>
+        <li>
+          <img src="../data/images/slide/20210818091041_630.png" alt="">
+        </li>
+      </ul>
     </div>
-    <div class="text wow fadeInUp">
-      <p style="text-indent: 2em;">
-        作为一家创新驱动的企业，飞米智能将通过强大的研发能力和不断的技术突破，力求在高端制造领域引领行业变革，推动产业的智能化与数字化发展。我们坚持以技术创新为核心，提供涵盖全流程的高效、智能制造解决方案，助力客户提升竞争力，为中国高端制造业的持续升级贡献力量。</span>
-      </p>
-    </div>
-    <ul>
-      <li>
-        <img src="../data/images/slide/20210818091011_734.png" alt="">
-      </li>
-      <li>
-        <img src="../data/images/slide/20210818091021_826.png" alt="">
-      </li>
-      <li>
-        <img src="../data/images/slide/20210818091030_952.png" alt="">
-      </li>
-      <li>
-        <img src="../data/images/slide/20210818091041_630.png" alt="">
-      </li>
-    </ul>
-  </div>
   </div>
 
 
