--- a/product/ccms.html
+++ b/product/ccms.html
@@ -205,14 +205,14 @@
         <div class="product_detail" id="pd1">
 
           <div class="pd1 clearfix">
-            <div class="img"><img src="../data/images/product/p2-1.png" alt="无接触电容测量系统"></div>
+            <div class="img"><img src="../data/images/product/p2-1-ccms.png" alt="无接触电容测量系统"></div>
             <div class="text">
               <h2>无接触电容测量系统</h2>
               <h4 style="display:none;">产品描述：</h4>
               <div class="text_c">
                 <p><strong style="white-space: normal;">产品描述：</strong></p>
                 <p style="text-indent: 2em;">
-                  无接触电容测量系统是一种使用了电容感应技术的先进测距装置，能够对导电电极的接近做出响应，返回实时的间隙测量值。其优点是精度高、测量范围宽、可靠性好、响应速度快等。无接触电容测量系统主要面向半导体加工、精密加工、测量设备等领域。
+                  无接触电容测量系统是一种使用了电容感应技术的先进测距装置，能够对导电电极的接近做出响应，返回实时的间隙测量值，相关技术指标与国外竞品持平。其优点是精度高、测量范围宽、可靠性好、响应速度快等。无接触电容测量系统主要面向半导体加工、精密加工、测量设备等领域。
                 </p>
               </div>
               <div class="pd_more clearfix">
@@ -267,9 +267,8 @@
             <div class="index_title2">
               <h3>规格参数</h3>
             </div>
-            <p><strong><img src="../template/default/images/fm/CCMS尺寸图.png" title="CCMS尺寸图.png" alt="image.png"
-                  style="width: 592px; height: auto;" /></strong></p>
-            <table cellpadding="0" cellspacing="0" height="52">
+            <p><strong><img src="../data/images/product/p2-1-ccms-parameter.png" title="CCMS规格参数" alt=""/></strong></p>
+            <!-- <table cellpadding="0" cellspacing="0" height="52">
               <tbody>
                 <tr>
                   <th>外形尺寸</th>
@@ -320,7 +319,7 @@
                   <td>校准装置、电源适配器、USB充电线、连接模块以及应用系统、说明书</td>
                 </tr>
               </tbody>
-            </table>
+            </table> -->
             <p><br /></p>
           </div>
         </div>
