--- a/index.html
+++ b/index.html
@@ -241,11 +241,10 @@
         </div>
         <div class="text">
           <p style="text-indent: 2em;">
-
-
-
-
-            哈尔滨飞米智能科技有限公司是一家由哈尔滨工业大学及教授共同投资成立创立的高科技公司。公司创始人系哈尔滨工业大学教授，黑龙江省高层次人才，依托创始人在传感器和运动控制方面多年的技术积淀，公司将致力于高端制造装备的研发和生产，产品广泛应用于半导体、医药、3C和航空航天等高端制造业。公司成立伊始就受到相关部门和投资公司的重点关注，目前已经获得黑龙江省科力高科技产业投资有限公司的融资。
+            哈尔滨飞米智能科技有限公司是一家专注于精密测量及精密运动控制技术研究、高端制造装备的研发和生产、赋能半导体加工等行业应用解决方案的高科技企业。
+公司源于哈尔滨工业大学精密测量与运动控制科研团队。团队在超精密微位移驱动控制技术，超精密测量控制技术与仪器工程方面深耕十余年，研究成果解决了多项国内卡脖子问题，取得了诸多奖项。
+公司传承了团队的创新基因与探索精神，目前公司产品主要面向半导体和航空航天领域，未来将拓展至消费电子、医药、日化等高端制造业，致力于成为精密运动控制及精密测量技术的引领者和开拓者，帮助客户更高效地推动行业技术发展，创造更加繁荣、高效和可持续的美好未来‌。
+公司成立伊始就受到相关部门和投资公司的重点关注，目前已经获得黑龙江省科力高科技产业投资有限公司的融资。
           </p>
         </div>
         <div class='more1'>
@@ -317,7 +316,7 @@
                 <h4>高精度加工检测</h4>
                 <p>提供高精度加工和检测服务，确保产品在制造过程中达到最高的精度和质量标准，满足客户对卓越性能的追求</p>
               </div>
-              <div class="img"><img src="template/default/images/fm/ＣＣＭＳ.png" alt="超精密专用设备定制" width="427" height="427"></div>
+              <div class="img"><img src="data/images/product/p2-1-ccms.png" alt="超精密专用设备定制" width="427" height="427"></div>
             </a>
           </div>
           <!-- <div class="swiper-slide">
