--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <a href="product/gjdcljcsb/index.html">高精度测量检测设备</a>
           </div>
         </li>
-        <li><a href="index.html" class='a1'>应用场景</a></li>
+        <li><a href="/p/yycj.html" class='a1'>应用场景</a></li>
         <li><a href="p/about.html" class='a1'>关于我们</a>
           <div class="b_nav">
             <a href="p/about.html#about1">企业特色</a>
