--- a/product/ccms.html
+++ b/product/ccms.html
@@ -103,7 +103,7 @@
         <p><br /></p>
       </div>
     </div>
-    
+
     <div class="index_nav">
       <ul class="nav container clearfix">
         <li><a href="../index.html" class='a1'>首页</a></li>
@@ -205,14 +205,17 @@
         <div class="product_detail" id="pd1">
 
           <div class="pd1 clearfix">
-            <div class="img"><img src="../data/images/product/p2-1-ccms.png" alt="无接触电容测量系统"></div>
+            <div class="img"><img src="../data/images/product/p2-1-ccms.png" alt="CGMS-15间隙测量系统"></div>
             <div class="text">
-              <h2>无接触电容测量系统</h2>
+              <h2>CGMS-15间隙测量系统</h2>
               <h4 style="display:none;">产品描述：</h4>
               <div class="text_c">
                 <p><strong style="white-space: normal;">产品描述：</strong></p>
                 <p style="text-indent: 2em;">
-                  无接触电容测量系统是一种使用了电容感应技术的先进测距装置，能够对导电电极的接近做出响应，返回实时的间隙测量值，相关技术指标与国外竞品持平。其优点是精度高、测量范围宽、可靠性好、响应速度快等。无接触电容测量系统主要面向半导体加工、精密加工、测量设备等领域。
+                  CGMS-15电容间隙测量系统是一种利用电容传感技术的间隙测量装置，能够对金属被测件的接近做出响应，实时返回多点间隙测量值，具有非接触、精度高、测量范围宽、可靠性好、响应速度快等优点。
+                </p>
+                <p style="text-indent: 2em;"></p>
+                电容间隙测量系统具有广泛的应用场景，如工业自动化生产、半导体加工、汽车制造、显示设备生产等领域。
                 </p>
               </div>
               <div class="pd_more clearfix">
@@ -231,34 +234,42 @@
             <p><br /></p>
             <div class="text wow fadeInUp">
               <div class="index_title2">
-                <h4>(1)协同性</h4>
+                <h4>(1)无接触测量</h4>
               </div>
               <p style="text-indent: 2em;">
-                单个产品上的三个CCMS传感器均可以独立准确测量腔体在工艺压力下的间隙。无论您需要测量完全平行还是稍微倾斜的间隙,都能通过CCMS实现最佳一致性。
+                利用电容传感技术，无需与被测物体直接接触，避免了因接触导致的磨损或损坏，不会对被测物体造成污染或损伤。
               </p>
               <p><br /></p>
 
               <div class="index_title2">
-                <h4>(2)便利性</h4>
+                <h4>(2)高精度</h4>
               </div>
               <p style="text-indent: 2em;">
-                设备采用无线设计,不会因为重复使用后折断线缆,或因拉紧线 缆而导致错位,   产品利用蓝牙实时传输数据。
+                进行现场校正操作后的4小时内，对于15 mm的间隙，CGMS可以实现±0.020 mm的测量精度；能够提供高重复性的测量结果，确保每次测量的一致性。
               </p>
               <p><br /></p>
 
               <div class="index_title2">
-                <h4>(3)适应性</h4>
+                <h4>(3)可靠性好</h4>
               </div>
               <p style="text-indent: 2em;">
-                通过数值校正来降低调整设备时的人为变数。通过数字和图形显示对调整结果进行反馈。任何人都可以通过软件设置测量标准,从而提高半导体加工工艺的流程一致性。
+                外壳采用阳极氧化铝，具有良好的耐用性和稳定性，适用于多种工作环境，每次充电可使用超过8小时，确保长时间的连续测量。
               </p>
               <p><br /></p>
 
               <div class="index_title2">
-                <h4>(4)可观性</h4>
+                <h4>(4)响应速度快</h4>
               </div>
               <p style="text-indent: 2em;">
-                产品配套软件显示数字和图形信息。每个图形均采用颜色编码,以便更轻松地查看间隙是否位于用户定义的目标间隙范围内。
+                CGMS能够实时提供测量数据，用户可以通过上位机软件实时查看调整效果；CGMS的测量速度快，适合动态测量，能够快速完成间隙测量和平行度检测。
+              </p>
+              <p><br /></p>
+
+              <div class="index_title2">
+                <h4>(5)操作简便</h4>
+              </div>
+              <p style="text-indent: 2em;">
+                支持自动处理，能够加快设备的设置、维护和故障排除，节省时间和人力成本；CGMS配备了易于使用的上位机软件，可以实时显示数值和图形数据，方便用户快速识别间隙是否在目标范围内。
               </p>
               <p><br /></p>
             </div>
@@ -267,7 +278,9 @@
             <div class="index_title2">
               <h3>规格参数</h3>
             </div>
-            <p><strong><img src="../data/images/product/p2-1-ccms-parameter.png" title="CCMS规格参数" alt=""/></strong></p>
+            <p><strong><img src="../data/images/product/p2-1-ccms-parameter.png" title="CGMS规格参数" alt="" /></strong></p>
+            <p><strong><img src="../data/images/product/p2-1-ccms-parameter2.png" title="CGMS规格参数" alt="" /></strong>
+            </p>
             <!-- <table cellpadding="0" cellspacing="0" height="52">
               <tbody>
                 <tr>
@@ -321,6 +334,24 @@
               </tbody>
             </table> -->
             <p><br /></p>
+
+            <div class="index_title2">
+              <h3>应用场景</h3>
+            </div>
+            <p><strong><img src="../data/images/product/p2-1-ccms_yycj.png" title="应用场景" alt="" /></strong></p>
+            <p><br /></p>
+
+            <div class="index_title2">
+              <h3>应用案例</h3>
+            </div>
+            <p style="text-indent: 2em;">
+              根据客户在半导体加工行业化学气相沉积（CVD）工艺中晶圆与极板之间的间隙平行度的测量需求，我们提供了一种自动化解决方案。该方案集成了CGMS-15间隙测量设备及配套软件，能够快速地检测多点间隙，并实时返回测量数据到软件界面，方便客户及时进行调整以保证两面平行度，节约生产时间。
+            </p>
+            <p style="text-indent: 2em;">这一方案既满足了他们对间隙检测的要求，还大幅度地节约了作业时间、降低成本。</p>
+            <p><strong><img src="../data/images/product/p2-1-ccms_yyal.png" title="应用案例" alt="" /></strong></p>
+            <p><br /></p>
+
+
           </div>
         </div>
 
@@ -353,7 +384,10 @@
             <a href="gjdcljcsb/index.html" class="list_item">高精度测量检测设备</a>
             <div class="s_icon1"></div>
             <div class="layer2" style="display:none;">
-              <a href="ccms.html" class="list_item2">无接触电容测量系统</a>
+              <a href="ccms.html" class="list_item2">CGMS-15间隙测量系统</a>
+            </div>
+            <div class="layer2" style="display:none;">
+              <a href="abrs.html" class="list_item2">ABRS-200高精度气浮转台</a>
             </div>
           </li>
         </ul>
