--- a/product/gjdcljcsb/index.html
+++ b/product/gjdcljcsb/index.html
@@ -204,6 +204,11 @@
                 alt="无接触电容测量系统" /></a>
             <h3><a href="../ccms.html" title="无接触电容测量系统">无接触电容测量系统</a></h3>
           </li>
+          <li class="wow fadeInUp">
+            <a href="abrs.html" title="ABRS-200高精度气浮转台" class="img"><img
+                src="../../data/images/product/p2-2-abrs.png" alt="ABRS-200高精度气浮转台" /></a>
+            <h3><a href="../abrs.html" title="ABRS-200高精度气浮转台">ABRS-200高精度气浮转台</a></h3>
+          </li>
 
         </ul>
 
@@ -257,6 +262,9 @@
             <div class="s_icon1"></div>
             <div class="layer2" style="display:none;">
               <a href="../ccms.html" class="list_item2">无接触电容测量系统</a>
+            </div>
+            <div class="layer2" style="display:none;">
+              <a href="abrs.html" class="list_item2">ABRS-200高精度气浮转台</a>
             </div>
           </li>
         </ul>
