--- a/product/index.html
+++ b/product/index.html
@@ -197,9 +197,14 @@
             <h3><a href="tgv.html" title="TGV飞秒激光加工设备">TGV飞秒激光加工设备</a></h3>
           </li>
           <li class="wow fadeInUp">
-            <a href="ccms.html" title="无接触电容测量系统" class="img"><img
-                src="../data/images/product/p2-1-ccms.png" alt="无接触电容测量系统" /></a>
-            <h3><a href="ccms.html" title="无接触电容测量系统">无接触电容测量系统</a></h3>
+            <a href="ccms.html" title="CGMS-15间隙测量系统" class="img"><img
+                src="../data/images/product/p2-1-ccms.png" alt="CGMS-15间隙测量系统" /></a>
+            <h3><a href="ccms.html" title="CGMS-15间隙测量系统">CGMS-15间隙测量系统</a></h3>
+          </li>
+          <li class="wow fadeInUp">
+            <a href="abrs.html" title="ABRS-200高精度气浮转台" class="img"><img
+                src="../data/images/product/p2-2-abrs.png" alt="ABRS-200高精度气浮转台" /></a>
+            <h3><a href="abrs.html" title="ABRS-200高精度气浮转台">ABRS-200高精度气浮转台</a></h3>
           </li>
           
         </ul>
@@ -253,7 +258,10 @@
             <a href="gjdcljcsb/index.html" class="list_item">高精度测量检测设备</a>
             <div class="s_icon1"></div>
             <div class="layer2" style="display:none;">
-              <a href="ccms.html" class="list_item2">无接触电容测量系统</a>
+              <a href="ccms.html" class="list_item2">CGMS-15间隙测量系统</a>
+            </div>
+            <div class="layer2" style="display:none;">
+              <a href="abrs.html" class="list_item2">ABRS-200高精度气浮转台</a>
             </div>
           </li>
         </ul>
