--- a/product/jmydkz/index.html
+++ b/product/jmydkz/index.html
@@ -262,6 +262,9 @@
             <div class="layer2" style="display:none;">
               <a href="../ccms.html" class="list_item2">无接触电容测量系统</a>
             </div>
+            <div class="layer2" style="display:none;">
+              <a href="abrs.html" class="list_item2">ABRS-200高精度气浮转台</a>
+            </div>
           </li>
         </ul>
 
